fix color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
   color: #E75480;
   text-decoration: none;
   font-family: 'Adamina';
-  font-size: 20px;
+  font-size: 25px;
   text-align: center;
 }
 
@@ -345,8 +345,8 @@ input[type=submit]:hover {
 }
 
 .flip-card-back a {
-  background-color: #a9a9a9;
-  color: white;
+  background-color: #595959;
+  color: #FFFFFF;
   padding: 10px 15px;
   border: none;
   border-radius: 2px;
@@ -368,7 +368,7 @@ input[type=submit]:hover {
 
 .callout-header {
   padding: 15px 8px;
-  background: #a9a9a9;
+  background: #595959;
   font-size: 25px;
   color: white;
 }
@@ -396,11 +396,11 @@ input[type=submit]:hover {
 }
 
 #modalbutton {
-  background-color:#a9a9a9;
+  background-color:#595959;
 	-moz-border-radius:9px;
 	-webkit-border-radius:9px;
 	border-radius:9px;
-	border:2px solid #a9a9a9;
+	border:2px solid #595959;
 	cursor:pointer;
 	color:#ffffff;
 	font-family: 'Adamina';
